[tool.poetry]
name = "poetry-cache-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "poetry_cache_test"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
